--- a/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/01-6-linked-main.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-indirect-access/3-guided-tour/01-6-linked-main.mdx
@@ -5,49 +5,10 @@ sidebar:
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
-If you haven't already created some tests, now is a good time. Add `main` and play with the different functions to test they work as expected.
+Now that our insert and delete functionality is complete, have play with the different functions and further test they work as expected. See how your code behaves when given strange or invalid inputs - have fun trying to break it!
 
-Here is a simple version that I used to test this out. We should add some extra checks to make sure that we remove different elements (the first, last, and only for example) but this is a pretty good start on what is a nice bit of memory management code to think through.
-
-<Accordion>
-  <AccordionItem header="My code as an example">
-
-```cpp
-int main()
-{
-    linked_list<int> *list = new_linked_list<int>();
-    add_node(list, 1);
-    add_node(list, 2);
-    add_node(list, 3);
-    add_node(list, 4);
-
-    node<int> *current = list->first;
-    while (current != nullptr) 
-    {
-        printf("%d->", current->data);
-        current = current->next;
-    }
-    printf("\n");
-
-    remove_node(list, list->first->next->next);
-
-    current = list->first;
-    while (current != nullptr) 
-    {
-        printf("%d->", current->data);
-        current = current->next;
-    }
-    printf("\n");
-
-    delete_linked_list(list);
-}
-```
-
-  </AccordionItem>
-</Accordion>
-
-:::caution
-
-Make sure you can see how the logic we created with Copilot is working. Getting this running is not as important as knowing why and how this works.
-
+:::tip
+  You'll further improve your understanding of the structure the more you experiment with it. This is already a pretty good start on what is a nice bit of memory management code to think through.
 :::
+
+The next two sections are optional, but will be quite interesting. We will explore how we can use function pointers, along with more of what we learned in the last chapter, to make our linked lists more convenient to work with.
